<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_summits"
            android:checked="true"
            android:icon="@drawable/baseline_landscape_black_24dp"
            android:title="@string/nav_summits" />
        <item
            android:id="@+id/nav_osmap"
            android:icon="@drawable/baseline_map_black_24dp"
            android:title="@string/nav_osmap" />
        <item
            android:id="@+id/nav_bookmarks"
            android:icon="@drawable/ic_baseline_bookmarks_24"
            android:title="@string/bookmarks" />
        <item
            android:id="@+id/nav_routes"
            android:checked="true"
            android:icon="@drawable/ic_baseline_route_24"
            android:title="@string/segments" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_baseline_pie_chart_24"
            android:title="@string/nav_statistics" />
        <item
            android:id="@+id/nav_diagrams"
            android:icon="@drawable/ic_baseline_multiline_chart_24"
            android:title="@string/nav_diagrams" />
        <item
            android:id="@+id/nav_barChart"
            android:icon="@drawable/ic_baseline_bar_chart_24"
            android:title="@string/bar_charts" />
        <item
            android:id="@+id/nav_diashow"
            android:icon="@drawable/ic_baseline_photo_album_24"
            android:title="@string/nav_diashow" />
        <item
            android:id="@+id/nav_forecast"
            android:icon="@drawable/ic_baseline_av_timer_24"
            android:title="@string/forecast" />
        <item
            android:id="@+id/nav_new_summits"
            android:icon="@drawable/baseline_landscape_black_24dp"
            android:title="@string/new_summits" />
        <item
            android:id="@+id/nav_additional_summit_data"
            android:icon="@drawable/ic_baseline_handyman_24"
            android:title="@string/additional_summit_data" />
        <item
            android:id="@+id/export_csv"
            android:icon="@drawable/baseline_upload_black_24dp"
            android:title="@string/nav_export" />
        <item
            android:id="@+id/import_csv"
            android:icon="@drawable/baseline_download_black_24dp"
            android:title="@string/nav_import" />
    </group>
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/action_settings"
            android:icon="@drawable/baseline_settings_white_24dp"
            android:title="@string/action_settings" />
    </group>

</menu>